2018-11-30  Tulio Magno Quites Machado Filho  <tuliom@linux.ibm.com>

	[BZ #23690]
	* elf/dl-runtime.c (_dl_profile_fixup): Guarantee memory
	modification order when accessing reloc_result->addr.
	* include/link.h (reloc_result): Add field init.
	* nptl/Makefile (tests): Add tst-audit-threads.
	(modules-names): Add tst-audit-threads-mod1 and
	tst-audit-threads-mod2.
	Add rules to build tst-audit-threads.
	* nptl/tst-audit-threads-mod1.c: New file.
	* nptl/tst-audit-threads-mod2.c: Likewise.
	* nptl/tst-audit-threads.c: Likewise.
	* nptl/tst-audit-threads.h: Likewise.

2018-12-07  Florian Weimer  <fweimer@redhat.com>

	[BZ #23927]
	CVE-2018-19591
	* inet/tst-if_index-long.c: New file.
	* inet/Makefile (tests): Add tst-if_index-long.

2018-12-07  Florian Weimer  <fweimer@redhat.com>

	* support/check.h (support_record_failure_is_failed): Declare.
	* support/descriptors.h: New file.
	* support/support_descriptors.c: Likewise.
	* support/tst-support_descriptors.c: Likewise.
	* support/support_record_failure.c
	(support_record_failure_is_failed): New function.
	* support/Makefile (libsupport-routines): Add support_descriptors.
	(tests): Add tst-support_descriptors.

2018-12-01  Florian Weimer  <fweimer@redhat.com>

	* support/support_capture_subprocess.c
	(support_capture_subprocess): Check that pipe descriptors have
	expected values.  Close original pipe descriptors in subprocess.

2018-11-28  Florian Weimer  <fweimer@redhat.com>

	* support/support.h (support_quote_string): Do not use str
	parameter name.

2018-11-27  Florian Weimer  <fweimer@redhat.com>

	* support/support.h (support_quote_string): Declare.
	* support/support_quote_string.c: New file.
	* support/tst-support_quote_string.c: Likewise.
	* support/Makefile (libsupport-routines): Add
	support_quote_string.
	(tests): Add tst-support_quote_string.

2018-12-07  DJ Delorie  <dj@redhat.com>

	[BZ #23907]
	* malloc/tst-tcfree3.c: New.
	* malloc/Makefile: Add it.

2018-11-26  Florian Weimer  <fweimer@redhat.com>